Fixed bug on small screens and removed deprecated settings

--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -21,7 +21,7 @@
   position: absolute;
   text-align: left;
   white-space: normal;
-  width: 100%;
+  width: 270px;
   z-index: 1010;
 }
 
@@ -56,12 +56,12 @@
   pointer-events: none;
 }
 &[class*=#{$media-l-m-s}] {
-  #o-popup {
+  #o-popup, .o-popup {
     width: 240px;
   }
 }
 &[class*=#{$media-l-m-s-xs}] {
-  #o-popup {
+  #o-popup, .o-popup {
     width: 200px;
   }
 }
